# bazel-registry

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
modules/dvarjson/1.1.0/: MODULE.bazel  README.md  source.json
modules/dvcfg6/6.2.5/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/1.0.0/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/1.0.1/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/1.0.2/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/1.0.3/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.0.0/: README.md  source.json
modules/rules_cfg6/2.0.1/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.0.2/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.1.0/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.1.1/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.1.2/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.2.0/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.2.1/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.2.2/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.2.3/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/2.2.4/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/3.0.0/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/3.0.1/: MODULE.bazel  README.md  source.json
modules/rules_cfg6/3.0.2/: MODULE.bazel  README.md  source.json
modules/rules_dvarjson/1.0.0/: MODULE.bazel  README.md  source.json
modules/rules_dvarjson/1.1.0/: MODULE.bazel  README.md  source.json
modules/rules_ecu_config/1.0.0/: MODULE.bazel  README.md  (+1 more)
src/dvarjson/: MODULE.bazel
src/dvcfg6/: BUILD.bazel  MODULE.bazel  ecu_config.bzl
src/rules_cfg6/: BUILD.bazel  MODULE.bazel  cfg6_BUILD_template.bzl  cfg6_defs_template.bzl  cfg6_rules_template.bzl  defs.bzl  rules.bzl
src/rules_dvarjson/: BUILD.bazel  MODULE.bazel  defs.bzl  dvarjson_BUILD_template.bzl  rules.bzl
src/rules_ecu_config/: BUILD.bazel  MODULE.bazel  SettingsPatcher.java  dbg_as_code_script_template.sh  defs.bzl  ecu_config.bzl  ecu_config_BUILD_template.bzl  ecu_config_defs_template.bzl  ecu_config_rules_template.bzl  rules.bzl
(+38 files in other folders)
